update deposit method
