# internal/http-server/handlers/balance/dto/response.go
@@ -1,0 +1,6 @@
+package dto
+
+type DepositResponse struct {
+	UserId  uint32  `json:"user_id"`
+	Balance float64 `json:"balance"`
+}
